# playground

C++/: CMakeLists.txt
C++/resources/hello/: hello.txt  write.txt
C++/src/: a.out  main.cpp
C++/src/interfaces/: a.h  b.h  interface.h~  interfaceTest.h
C++/src/lambda/: a.out  lambdaTest.cpp
C++/src/readingFile/: readingFileTest.h
C++/src/regex/: a.out  regexTest.cpp
C++/src/templates/: a.out  main.cpp  max.hpp
C++/src/writingFile/: writingFile.h
C/Synchronized Queue/: README  synchronizedQueue.c  test.c
Concurrency/C++/: a.out  diningPhilosophers.cpp  semaphore.cpp  semaphore.h  semaphoreTest.cpp  threadSafeCounter.cpp
Concurrency/Java/: BarberProblem.java  ConditonBoundedBuffer.java  OneMoreSemaphore.java  Pootify.java  SemaphoreBarrier.java  SemaphoreOnLock.java  SharedSavingsAccount.java  Sushi.java  Traghetto.java
Concurrency/Scala/: ActorExample.scala  DiningPhilosophers.scala
